welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: type mismatch;
 found   : java.awt.Color
 required: String
    T(1)=getCouleurSol()
                      ^Array1:12: error: type mismatch;
 found   : String
 required: java.awt.Color
      setCouleurBrosse(T(i))
                        ^